--- a/mvc/template/admin_styles.css
+++ b/mvc/template/admin_styles.css
@@ -1,54 +1,8 @@
 
-
-body {
-  height: 100vh;
-  position: relative;
-}
-
-nav ul {
-  list-style: none;
-  overflow: hidden;
-  background-color: #f2f2f2;
-}
-
-nav ul li {
-  font-size: 1.5em;
-  -webkit-transition: background-color 0.5s;
-  transition: background-color 0.5s;
-  padding: 20px;
-}
-
-nav ul a:nth-child(1) {
-  float: left;
-}
-
-nav ul a:nth-child(n+2) {
-  float: right;
-}
-
-nav ul li:hover {
-  background-color: #ff7800;
-}
-
-@media (max-width: 600px) {
-  nav li {
-    margin: unset !important;
-    text-align: center;
-    padding: 10px 0;
-  }
-  nav a {
-    float: unset !important;
-  }
-  nav ul {
-    overflow: unset !important;
-  }
-}
-
-#index-text {
-  color: black;
+h1{
   text-align: center;
-  margin-top: 60px;
-  font-size: 4rem;
+  color: #ff7800;
+
 }
 
 form {
@@ -56,6 +10,7 @@ form {
   max-width: 600px;
   width: 100%;
   padding: 0 20px;
+  text-align:center;
 }
 
 form input {
@@ -75,77 +30,8 @@ form button:hover {
   background-color: #ff7800;
 }
 
-/*Remove Default Form Styling*/
 button, input, select, textarea {
   font-family: inherit;
   font-size: 100%;
 }
 
-#footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  background-color: #f2f2f2;
-  width: 100%;
-}
-
-#footer p {
-  text-align: center;
-  font-size: 1.5rem;
-  padding: 30px 0;
-}
-
-@media (max-height: 800px) {
-  #footer {
-    position: static;
-    margin-top: 400px;
-  }
-  #footer p {
-    padding: 30px 0 200px 0;
-  }
-}
-
-.header {
-  text-align: center;
-  margin-top: 20px;
-}
-
-.form-message {
-  margin: 20px auto 0 auto;
-  border-radius: 10px;
-  text-transform: capitalize;
-  max-width: 560px;
-  width: 90%;
-  height: 80px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.form-message p {
-  text-align: center;
-  font-size: 1.6rem;
-}
-
-.form-message-red {
-  background-color: #ffb3b3;
-  border: 2px solid #ff0000;
-}
-
-.form-message-green {
-  background-color: lightgreen;
-  border: 2px solid green;
-}
-
-
-
-a, a:link, a:visited, a:hover, a:active {
-  text-decoration: none;
-  color: inherit;
-}
