--- a/mvc/template/ateliers.html
+++ b/mvc/template/ateliers.html
@@ -6,7 +6,7 @@
     <div class="box-container">
 
         <div class="box">
-            <img class="image" src="../assets/img/choukou.jpg" alt="">
+            <img class="image" src="./assets/img/choukou.jpg" alt="">
             <div class="content">
                 <img src="img/s-1.png" alt="">
                 <h3> Viande </h3>
@@ -14,7 +14,7 @@
             </div>
         </div>
         <div class="box">
-            <img class="image" src="../assets/img/poisson_3.jpg" alt="">
+            <img class="image" src="./assets/img/poisson_3.jpg" alt="">
             <div class="content">
                 <img src="img/s-2.png" alt="">
                 <h3> Poisson </h3>
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="box">
-            <img class="image" src="../assets/img/vegan.jpg" alt="">
+            <img class="image" src="./assets/img/vegan.jpg" alt="">
             <div class="content">
                 <img src="images/s-3.png" alt="">
                 <h3> Végétarien </h3>
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="box">
-            <img class="image" src="../assets/img/ananas.jpg" alt="">
+            <img class="image" src="./assets/img/ananas.jpg" alt="">
             <div class="content">
                 <img src="images/s-4.png" alt="">
                 <h3> Cold drinks </h3>
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div class="box">
-            <img class="image" src="../assets/img/pastel_3.png" alt="">
+            <img class="image" src="./assets/img/pastel_3.png" alt="">
             <div class="content">
                 <img src="images/s-5.png" alt="">
                 <h3> Snack </h3>
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div class="box">
-            <img class="image" src="../assets/img/tapioca.jpg" alt="">
+            <img class="image" src="./assets/img/tapioca.jpg" alt="">
             <div class="content">
                 <img src="images/s-6.png" alt="">
                 <h3> Petit déjeuner </h3>
@@ -57,6 +57,9 @@
     </div>
 
     </section>
-
-{%ateliers%}
+<table>
+    <tbody>
+    {%ateliers%}
+    </table>
+</tbody>
 
