--- a/mvc/template/header.html
+++ b/mvc/template/header.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Ateliers Culinaires gratuits de recettes africaines</title>
-        <meta name="description" content="."/>
+        <meta name="description" content=".Des ateliers culinaires gratuits, pour découvrir des plats et des recettes typiquement africains comme le maffé, le tiébou djeen, le aloko et le poulet braisé"/>
 
         
         <!--lien font Awesome-->
@@ -65,5 +65,4 @@
     <!--fichiers js-->
     
     
-    </body>
-</html>
+    
