--- a/mvc/template/atelier.html
+++ b/mvc/template/atelier.html
@@ -1,13 +1,15 @@
     
-            <tr>
-                <td>{%id2%}</td>
-                <td>{%created_at%}</td>
-                <td>{%category_id%}</td>
-                <td>{%url_picture%}</td>
-                <td>{%name%}</td>
-                <td>{%description%}</td>
+        <div class="atelier">
+            
+            <div class="box-container">
+                <div class="content">
+                    <img src="{%url_picture%}" alt="">
+                    <h3>{%name%}</h3>
+                    <p>{%description%}</p>
 
-            </tr>
+                </div>
+            </div>
+        </div>
+
         
-            
-            
+        
