--- a/mvc/template/ateliers.html
+++ b/mvc/template/ateliers.html
@@ -9,7 +9,7 @@
             <img class="image" src="./assets/img/choukou.jpg" alt="">
             <div class="content">
                 <img src="img/s-1.png" alt="">
-                <h3> Viande </h3>
+                <h3>De la viande grillée au charbon de bois</h3>
                 <p>La viande qu’elle soit de bœuf, de mouton, de porc ou de la chèvre, est souvent cuisinée avec des épices qui donnent une saveur inoubliable aux plats Africains.</p>
             </div>
         </div>
@@ -17,7 +17,7 @@
             <img class="image" src="./assets/img/poisson_3.jpg" alt="">
             <div class="content">
                 <img src="img/s-2.png" alt="">
-                <h3> Poisson </h3>
+                <h3> Du poisson frit sur un lit de légumes frais </h3>
                 <p> Le poisson frit, braisé, fumé ou séché est très présent dans la cuisine Africaine, qu’on ajoute souvent dans les légumes ou dans les feuilles.</p>
             </div>
         </div>
@@ -25,7 +25,7 @@
             <img class="image" src="./assets/img/vegan.jpg" alt="">
             <div class="content">
                 <img src="images/s-3.png" alt="">
-                <h3> Végétarien </h3>
+                <h3> Des légumes cuits au poêle</h3>
                 <p>L’aubergine africaine est une plante herbacée potagère, cultivée en Afrique et au Brésil. En Afrique tropicale c’est même le 3ème légume consommé, juste après la tomate et l’oignon.</p>
             </div>
         </div>
@@ -33,7 +33,7 @@
             <img class="image" src="./assets/img/ananas.jpg" alt="">
             <div class="content">
                 <img src="images/s-4.png" alt="">
-                <h3> Cold drinks </h3>
+                <h3>Du jus de fruit frais, ananas ou gingembre</h3>
                 <p>La cuisine africaine est très riche dans la production des boissons naturelles grâce à ces fruits tropicaux (pastèque,banane, ananas, mangue, papaye, corossol, boabab…).</p>
             </div>
         </div>
@@ -41,7 +41,7 @@
             <img class="image" src="./assets/img/pastel_3.png" alt="">
             <div class="content">
                 <img src="images/s-5.png" alt="">
-                <h3> Snack </h3>
+                <h3>Des pastels fourrés à la viande hachée</h3>
                 <p>Les pastels sont des petits chaussons frits, fourrés au poisson, à la viande,  mais l'on trouve de plus en plus de pastels au thon. Ils se mangent souvent en entrée et on les trempe traditionnellement dans une sauce tomate-oignons..</p>
             </div>
         </div>
@@ -49,7 +49,7 @@
             <img class="image" src="./assets/img/tapioca.jpg" alt="">
             <div class="content">
                 <img src="images/s-6.png" alt="">
-                <h3> Petit déjeuner </h3>
+                <h3> De la bouillie de tapioca au petit déjeuner </h3>
                 <p> Nourrissant et peu cher, la bouillie permet en Afrique, de commencer la journée du bon pied. Parfois accompagnée de pain ou de beignets, elle peut également être servie avec du lait et des cacahuètes grillées. Raison pour laquelle on en raffole aussi pour le goûter..</p>
             </div>
         </div>
