--- a/mvc/template/category.html
+++ b/mvc/template/category.html
@@ -1,7 +1,8 @@
 
-<tr>
-    <td>{%id%}</td>
-    <td>{%name%}</td>
-    <td>{%description%}</td>
-</tr>
-    
+
+    <div class="box-category">
+            <div class="content">
+                <h3>{%name%}</h3>
+                <p>{%description%}</p>
+            </div>
+    </div>
