--- a/mvc/template/footer.html
+++ b/mvc/template/footer.html
@@ -22,9 +22,9 @@
         </div>
         <div class="box">
                 <h3>Raccourcis</h3>
-                <a href="accueil.php" class="links"> <i class="fas fa-arrow-right"></i>Accueil</a>
-                <a href="ateliers.php" class="links"> <i class="fas fa-arrow-right"></i>Ateliers</a>
-                <a href="galerie.php" class="links"> <i class="fas fa-arrow-right"></i> Galerie</a>
+                <a href="./index.php?url=home" class="links"> <i class="fas fa-arrow-right"></i>Accueil</a>
+                <a href="./index.php?url=ateliers" class="links"> <i class="fas fa-arrow-right"></i>Ateliers</a>
+                <a href="./index.php?url=category" class="links"> <i class="fas fa-arrow-right"></i> Galerie</a>
                 <a href="temoignages.php" class="links"> <i class="fas fa-arrow-right"></i>  Témoignages</a>
                 <a href="a_propos.php" class="links"> <i class="fas fa-arrow-right"></i>   A Propos</a>
                 <a href="blog.php" class="links"> <i class="fas fa-arrow-right"></i> Blog</a>
