--- a/mvc/template/atelier.html
+++ b/mvc/template/atelier.html
@@ -4,12 +4,11 @@
             <div class="box-container">
                 <div class="content">
                     <img src="{%url_picture%}" alt="">
-                    <h3>{%name%}</h3>
+                    <h3><a href="#">{%name%}</a></h3>
                     <p>{%description%}</p>
 
                 </div>
             </div>
         </div>
 
-        
         
