--- a/mvc/template/ateliers.html
+++ b/mvc/template/ateliers.html
@@ -57,6 +57,8 @@
     </div>
 
     </section>
+        <h1 class="heading"> Ici, une large<span> gamme de saveurs </span> faites votre choix ! </h1>
+
         <table>
         <tbody>
         {%ateliers%}
