--- a/mvc/template/newsletter.html
+++ b/mvc/template/newsletter.html
@@ -1,7 +1,7 @@
 <section class="heading">
         <h1 class="heading"> Notre <span>actualité</span> en avril </h1> 
         <div>
-            <img src="img/epices.jpg">
+            <img src="./assets/img/epices.jpg">
             </div>
         
         <div class="actu">
