--- a/mvc/template/ateliers.html
+++ b/mvc/template/ateliers.html
@@ -57,7 +57,7 @@
     </div>
 
     </section>
-        <h1 class="heading"> Ici, une large<span> gamme de saveurs </span> faites votre choix ! </h1>
+        <h2 class="heading"> Ici, les catégories d'une large <span> gamme de saveurs. </span> Faites votre choix ! </h2>
 
         <table>
         <tbody>
