--- a/mvc/template/headerAdmin.html
+++ b/mvc/template/headerAdmin.html
@@ -17,3 +17,48 @@
     </head>
     
     <body>
+
+    <header class="header">
+        <img src="./assets/img/logo.png" alt="logo">
+        <nav class="navbar" id="navbar">
+            <a href="./index.php?url=home">Accueil</a>
+            <a href="./index.php?url=ateliers">Ateliers</a>
+            <a href="./index.php?url=category">Galerie</a>
+            <a href="./index.php?url=temoignages">Témoignages</a>
+            <a href="./index.php?url=a_propos">A propos</a>
+            <a href="./index.php?url=blog">Blog</a>
+        </nav>
+        <div class="icons">
+            <div class="fas fa-bars" id="menu-btn"></div>
+            <div class="fas fa-search" id="search-btn"></div>
+            <div class="fas fa-shopping-cart" id="cart-btn"></div>
+            <div class="fas fa-users" id="login-btn"></div>
+        </div>
+        
+        <form action="" class="search-form" id="search-form">
+            <input type="search" placeholder="recherche"/>
+            <label for="search-box" class="fas fa-search"></label>
+        </form>
+        
+        <form action="./index.php?url=login" method= 'post' class="login-form" id="login-form">
+            
+            <h3>Connexion</h3>
+            <input type="email" name='email' placeholder="mail" class="box">
+            <input type="password" name='password'placeholder="mot de passe" class="box">
+            <input type="hidden" name="csrf" value="{%csrf%}"/>
+            <input type="submit" value="Connexion" class="btn">
+        </form>
+        
+        <form action="./index.php?url=register" method='post' class="register" id="register"/>
+            <h3>Inscrivez-vous ! </h3>
+            <input type="text" name= "prenom" placeholder="Prenom" class="box" required/>
+            <input type="text" name="nom" placeholder="Nom" required/>
+            <input type="email" name= "email" placeholder="Votre mail" class="box" required/>
+            <input type="password" name= "password" placeholder="Mot de passe"/>
+            <input type="hidden" name="csrf" value="{%csrf%}"/>
+
+            <input type="submit"  class="btn" value ="valider"/>
+            
+        </form>
+        
+    </header>
