--- a/mvc/template/temoignages.html
+++ b/mvc/template/temoignages.html
@@ -77,7 +77,7 @@
                 <i class="fas fa-star"></i>
             </div>
             
-            <p>Bonjour madame. J'ai remarqué que, comme d'habitude votre atelier culinaire était de très bonne qualité. Les plats étaient délicieux et la surprise totale. Je vous contacterai bientôt pour voir si vous pourrez donner un atelier similaire à notre team building.</p>
+            <p>Bonjour madame. J'ai remarqué que, comme d'habitude votre atelier culinaire était exceptionnel, avec des participants agréables. Les plats étaient délicieux et la surprise totale. Je vous contacterai bientôt pour voir si vous pourrez donner un atelier similaire à notre team building.</p>
             
             <div class="user">
                 <img src="./assets/img/pic-3.svg" alt="">
