--- a/mvc/template/accueil.html
+++ b/mvc/template/accueil.html
@@ -22,21 +22,21 @@
                 <img src="./assets/img/couscous.jpeg" alt="">
                 <h3> couscous à la viande </h3>
                 <p>Originaire d’Afrique du Nord, le coucous est très réputé pour son goût particulier et délicieux mais aussi pour ses vertus thérapeutiques. Elle peut être accompagnée de tout type de sauce et est incontournable lors des grandes occasions !</p>
-                <a href="https://www.vudaf.com/cuisine/top-15-des-plats-africains-les-plus-populaires/" class="btn"> lire plus </a>
+                <a href="https://www.vudaf.com/cuisine/top-15-des-plats-africains-les-plus-populaires/" target="_blank"class="btn"> lire plus </a>
             </div>
     
             <div class="box">
                 <img src="./assets/img/maffe.jpg" alt="">
                 <h3> sauce crème arachide </h3>
                 <p>Appelé Mafé au Sénégal et Tigua dégué au Mali, ce plat est très prisé en Afrique de l’Ouest. Il est fait à base de riz blanc, de sauce d’arachide et de viande. On peut le manger avec du poisson, du poulet ou tout simplement avec des légumes !</p>
-                <a href="https://www.vudaf.com/cuisine/top-15-des-plats-africains-les-plus-populaires/" class="btn"> lire plus </a>
+                <a href="https://www.vudaf.com/cuisine/top-15-des-plats-africains-les-plus-populaires/"target="_blank" class="btn"> lire plus </a>
             </div>
     
             <div class="box">
                 <img src="./assets/img/tiep_2.jpg" alt="">
                 <h3> riz gras au poisson </h3>
                 <p>Certains pays de l’Afrique francophone l'appelent"riz gras". L’incroyable Thiebou Dieune Penda Mbaye, dont Youssou Ndour a même chanté les merveilles, est le plat national du Sénégal. C’est un mélange de riz, de poissons et de légumes !</p>
-                <a href="https://www.vudaf.com/cuisine/top-15-des-plats-africains-les-plus-populaires/" class="btn"> lire plus </a>
+                <a href="https://www.vudaf.com/cuisine/top-15-des-plats-africains-les-plus-populaires/" target="_blank"class="btn"> lire plus </a>
             </div>
     
         </div>
@@ -50,21 +50,21 @@
                 <img src="./assets/img/Aloko.jpg" alt="">
                 <h3> frites de banane plantain </h3>
                 <p>Le plantain est un faux-fruit très présent dans la cuisine de l'Ouest africain.La recette est simple puisqu’il s’agit de morceaux de banane plantain frits dans de l’huile de palme rouge ou d’arachide. Mais les choses les plus simples sont parfois les meilleures!</p>
-                <a href="https://www.geo.fr/voyage/tout-savoir-sur-lalloco-ce-delice-venu-de-cote-divoire-198126" class="btn"> lire plus </a>
+                <a href= "https://www.vudaf.com/cuisine/top-15-des-plats-africains-les-plus-populaires/" target="_blank" class="btn"> lire plus </a>
             </div>
     
             <div class="box">
                 <img src="./assets/img/poulet_yassa.jpg" alt="">
                 <h3> yassa au poulet </h3>
                 <p>En voila aussi un plat très connu, mais surtout apprécié. Très facile à préparer, il est composé de riz blanc, d’oignons et de citron. Il peut être mangé soit avec du poulet (l’accompagnement le plus connu), avec de la viande ou du poisson!</p>
-                <a href="https://www.vudaf.com/cuisine/top-15-des-plats-africains-les-plus-populaires/" class="btn"> lire plus </a>
+                <a href="https://www.vudaf.com/cuisine/top-15-des-plats-africains-les-plus-populaires/"target="_blank" class="btn"> lire plus </a>
             </div>
     
             <div class="box">
                 <img src="./assets/img/gingembre.jpg" alt="">
                 <h3> jus frais de gingembre </h3>
                 <p>Apprécié à travers tout le continent africain, le breuvage y est incontournable ! Il est réputé pour son goût traditionnellement relevé : il n’est pas rare qu’un africain garde en mémoire des souvenirs d’enfance un peu piquants ! </p>
-                <a href="https://villamaasai.fr/histoire-recette-gnamankoudji/" class="btn"> lire plus </a>
+                <a href="https://www.vudaf.com/cuisine/top-15-des-plats-africains-les-plus-populaires/"target="_blank" class="btn"> lire plus </a>
             </div>
     
         </div>
