--- a/mvc/template/atelier.html
+++ b/mvc/template/atelier.html
@@ -4,7 +4,7 @@
             <div class="box-container">
                 <div class="content">
                     <img src="{%url_picture%}" alt="">
-                    <h3><a href="#">{%name%}</a></h3>
+                    <h3><a href="#" data-id="{%id2%}"">{%name%}</a></h3>
                     <p>{%description%}</p>
 
                 </div>
