--- a/mvc/template/atelierToModify.html
+++ b/mvc/template/atelierToModify.html
@@ -1,7 +1,7 @@
 <section class="update">
     
 <form method="post" action="./index.php?url=valideModify">
-    <td>{%id2%}</td><br>
+    <td><input type = "hidden" name ="id" value="{%id2%}"/></td><br>
     <td><input type="text" name="created_at" value="{%created_at%}"</td><br>
     <td><input type="text" name="category_id" value="{%category_id%}"/></td><br>
     <td><input type="text" name="url_picture" value="{%url_picture%}"/></td><br>
