--- a/mvc/template/blog.html
+++ b/mvc/template/blog.html
@@ -29,7 +29,7 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="img/atelier_4.jpg" alt="">
+            <img src="./assets/img/atelier_4.jpg" alt="">
             <div class="content">
                 <div class="icons">
                     <a href="#"> <i class="fas fa-user"></i> par Isageek </a>
@@ -37,12 +37,12 @@
                 </div>
                 <h3> Nous sommes présents au salon culinaire d'Angers </h3>
                 <p> Au salon culinaire nous vous avons préparé de délicieuses petites gourmandises.  </p>
-                <a href="newsletter.php" class="btn"> lire plus </a>
+                <a href="./index.php?url=newsletter" class="btn"> lire plus </a>
             </div>
         </div>
 
         <div class="box">
-            <img src="img/bissap.jpg" alt="">
+            <img src="./assets/img/bissap.jpg" alt="">
             <div class="content">
                 <div class="icons">
                     <a href="#"> <i class="fas fa-user"></i> par Isageek </a>
@@ -50,12 +50,12 @@
                 </div>
                 <h3> Découvrez les bienfaits de la fleur d'hibiscus</h3>
                 <p>Outre ses vertus désaltérantes, la tisane à l'hibiscus est connue pour ses vertus minceur.</p>
-                <a href="newsletter.php" class="btn"> lire plus </a>
+                <a href="./index.php?url=newsletter" class="btn"> lire plus </a>
             </div>
         </div>
 
         <div class="box">
-            <img src="img/courrier_2.svg" alt="">
+            <img src="./assets/img/courrier_2.svg" alt="">
             <div class="content">
                 <div class="icons">
                     <a href="#"> <i class="fas fa-user"></i> par Isageek </a>
@@ -64,7 +64,7 @@
                 <h3> On parle de nous dans votre journal préféré </h3>
                 
                 <p>"Ceux qui ont beaucoup à espérer et rien à perdre seront toujours dangereux."</p>
-                <a href="newsletter.php" class="btn"> lire plus </a>
+                <a href="./index.php?url=newsletter" class="btn"> lire plus </a>
             </div>
         </div>
 
