--- a/mvc/template/footer.html
+++ b/mvc/template/footer.html
@@ -24,14 +24,14 @@
                 <a href="./index.php?url=home" class="links"> <i class="fas fa-arrow-right"></i>Accueil</a>
                 <a href="./index.php?url=ateliers" class="links"> <i class="fas fa-arrow-right"></i>Ateliers</a>
                 <a href="./index.php?url=category" class="links"> <i class="fas fa-arrow-right"></i> Galerie</a>
-                <a href="temoignages.php" class="links"> <i class="fas fa-arrow-right"></i>  Témoignages</a>
-                <a href="a_propos.php" class="links"> <i class="fas fa-arrow-right"></i>   A Propos</a>
-                <a href="blog.php" class="links"> <i class="fas fa-arrow-right"></i> Blog</a>
+                <a href="./index.php?url=temoignages" class="links"> <i class="fas fa-arrow-right"></i>  Témoignages</a>
+                <a href="./index.php?url=a_propos" class="links"> <i class="fas fa-arrow-right"></i>   A Propos</a>
+                <a href="./index.php?url=blog" class="links"> <i class="fas fa-arrow-right"></i> Blog</a>
                 
         </div>
         <div class="box">
                 <h3>Newsletter</h3>
-                <a href="newsletter.php"><p>Actualités</p></a>
+                <a href="./index.php?url=newsletter"><p>Actualités</p></a>
                 
         </div>
             
