--- a/mvc/template/login_ok.html
+++ b/mvc/template/login_ok.html
@@ -1,6 +1,6 @@
 
     <section class="heading">
-            <h1><span>Bienvenue chez Isa </span> <a href="https://isabellecoyssi.sites.3wa.io/developpement/personal_project/ateliers_culinaires/back_end/mvc/index.php?url=ateliers">choisissez votre atelier</a></h1>
+            <h1><span>Bienvenue chez Isa </span> <a href="./index.php?url=ateliers">choisissez votre atelier</a></h1>
     </section>
         
     
