--- a/mvc/template/temoignages.html
+++ b/mvc/template/temoignages.html
@@ -1,33 +1,31 @@
     <section class="background" id="background">
     
-            <h1 class="heading"> Nos visiteurs <span> témoignent </span> de leur expérience</h1>
+        <h1 class="heading"> Des visiteurs <span> contents </span> de leur expérience</h1>
             
     
-        </section>
+    </section>
         
         
-        <section>
-            <div id="wrapper">
+    <section>
+        <div id="wrapper">
         
-                <div class="carrousel">
+            <div class="carrousel">
                             
-                    <div class="plan p1"><img src="./assets/img/atelier_1.jpg" ></div>
-                    <div class="plan p2"><img src="./assets/img/atelier_2.jpg" ></div>
-                    <div class="plan p3"><img src="./assets/img/atelier_3.jpg"></div>
-                    <div class="plan p4"><img src="./assets/img/coconut.jpg"></div>
-                    <div class="plan p5"><img src="./assets/img/cuisiniere_2.jpg"></div>
-                    <div class="plan p6"><img src="./assets/img/atelier_5.jpg"></div>
-                    <div class="plan p7"><img src="./assets/img/avocat.jpg"></div>
-                    <div class="plan p8"><img src="./assets/img/mais.jpg"></div>
+                <div class="plan p1"><img src="./assets/img/atelier_1.jpg" ></div>
+                <div class="plan p2"><img src="./assets/img/atelier_2.jpg" ></div>
+                <div class="plan p3"><img src="./assets/img/atelier_3.jpg"></div>
+                <div class="plan p4"><img src="./assets/img/coconut.jpg"></div>
+                <div class="plan p5"><img src="./assets/img/cuisiniere_2.jpg"></div>
+                <div class="plan p6"><img src="./assets/img/atelier_5.jpg"></div>
+                <div class="plan p7"><img src="./assets/img/avocat.jpg"></div>
+                <div class="plan p8"><img src="./assets/img/mais.jpg"></div>
             
-                </div>
             </div>
+        </div>
     
         </section>
         
         <section class="review" id="review">
-    
-            
             <div class="box-container">
     
             <div class="box">
