--- a/mvc/template/header.html
+++ b/mvc/template/header.html
@@ -62,7 +62,15 @@
         </form>
         
     </header>
-    <!--fichiers js-->
-    
+    <!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <h1 class="text">blablabla</h1>
+  </div>
+
+</div>
     
     
