--- a/mvc/template/error.html
+++ b/mvc/template/error.html
@@ -1,5 +1,5 @@
 <section class="heading">
-        <h1><span>échec de connexion </span> Reconnectez-vous</h1>
+        <h1><span>échec de connexion </span> Êtes-vous inscrit(e)? Reconnectez-vous</h1>
 </section>
     
    
