--- a/mvc/assets/styles.css
+++ b/mvc/assets/styles.css
@@ -610,7 +610,7 @@ label {
 
 .content h3{
     font-size: 3rem;
-    color: black;
+    color: #ff7800;
     padding-top: 2rem;
     text-align: center;
 }
@@ -620,9 +620,11 @@ label {
 }
 .content p{
     font-size: 2rem;
+    font-weight:bold;
     color: black;
     line-height: 2rem;
     padding: 1rem 0;
+    text-align: center;
 }
 
 .photo{
@@ -745,11 +747,13 @@ label {
     margin: .5rem;
     padding: .3rem;
     font-size: 2rem;
-}
-
-.art {
     background: right/contain content-box border-box no-repeat
         url('../assets/img/bissap.jpeg') white;
+}
+
+.art  p{
+    color:black;
+    font-weight:bold;
 }
 
 /**page admin edit*/
@@ -781,6 +785,48 @@ button{
     border-style: groove;
     border-color: #ff7800;
 }
+
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 999; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #ff7800;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  text-align: center;
+}
+
+/* The Close Button */
+.close {
+  color: #fefee2;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 
 /**media queries*/
 
@@ -910,44 +956,4 @@ button{
     .footer .credit span{
         color: #ff7800;
     
-}
-
-
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 999; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-/* Modal Content */
-.modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-}
-
-/* The Close Button */
-.close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
 }
