--- a/mvc/template/header.html
+++ b/mvc/template/header.html
@@ -44,7 +44,7 @@
             
             <h3>Connexion</h3>
             <input type="email" name='email' placeholder="mail" class="box">
-            <input type="password" name='password'placeholder="mot de passe" class="box">
+            <input type="password" name='password'placeholder="mot de passe" class="box" required/>
             <input type="hidden" name="csrf" value="{%csrf%}"/>
             <input type="submit" value="Connexion" class="btn">
         </form>
@@ -68,7 +68,7 @@
   <!-- Modal content -->
   <div class="modal-content">
     <span class="close">&times;</span>
-    <h1 class="text">blablabla</h1>
+    <h1 class="text"></h1>
   </div>
 
 </div>
