--- a/mvc/assets/styles.css
+++ b/mvc/assets/styles.css
@@ -758,6 +758,9 @@ label {
     font-size: 30px;
     color:black;
 }
+.form-user{
+    font-size: 20px;
+}
 
 .heading{
     color: #ff7800;
@@ -781,7 +784,7 @@ button{
 }
 
 
-/* The Modal (background) */
+/* Fenêtre Modal (background) */
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
